src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__meta_clause_snapshots__snapshot_meta_bind.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    PERCENT "%"
    IDENT "bind"
    BODY
      L_BRACE "{"
      CSS_PROPERTY
        IDENT "event"
        LEFT_ARROW "<-"
        CSS_VALUE
          VARIABLE_REF "$event"
        SEMICOLON ";"
      R_BRACE "}"
  EOF ""
