src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__meta_clause_snapshots__snapshot_meta_capture_type.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  META_DEF
    PERCENT "%"
    IDENT "capture_type"
    IDENT "easing"
    BODY "{ }"
  EOF ""
