src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__meta_clause_snapshots__snapshot_meta_cleanup.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    PERCENT "%"
    IDENT "cleanup"
    BODY "{ removeEventListener(); }"
  EOF ""
