src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__meta_clause_snapshots__snapshot_meta_emit_js.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    PERCENT "%"
    IDENT "emit"
    IDENT "js"
    BODY "{ console.log('hello'); }"
  EOF ""
