src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__meta_clause_snapshots__snapshot_meta_form.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    PERCENT "%"
    IDENT "form"
    BODY
      L_BRACE "{"
      DIRECTIVE
        AT_SIGN "@"
        KW_ON "on"
        ARG
          VARIABLE_REF "$event:ident"
      R_BRACE "}"
  EOF ""
