src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__meta_clause_snapshots__snapshot_meta_yield.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE "%yield animation;"
  EOF ""
